# sce

./: .gitignore  CHANGELOG_V2.0.2_FINAL.md  DEADJOE  LICENSE  README.md  analytics_sample.csv  close_prices.csv  high_prices.csv  open_prices.csv  sce.cabal  temperature_sample.csv  verify-build.sh
app/: Main.hs
examples/: quarterly_revenue.csv  revenue_data.csv  sample_output.txt
src/SCE/CLI/: Interactive.hs  Parser.hs  Runner.hs
src/SCE/Chart/: Admissibility.hs  Annotations.hs  BarChart.hs  BoxPlot.hs  ConfidenceInterval.hs  DotChart.hs  Histogram.hs  Inference.hs  LineChart.hs  Rejection.hs  ScatterPlot.hs
src/SCE/Core/: Correlation.hs  DataModel.hs  Error.hs  Logger.hs  MeasurementScale.hs  Statistics.hs  Types.hs
src/SCE/Ingestion/: Coercion.hs  MissingData.hs  Parser.hs  Schema.hs
src/SCE/Liquid/: Measures.hs  Properties.hs  Refinements.hs
src/SCE/Output/: DocxRenderer.hs  MarkdownRenderer.hs  TextRenderer.hs
src/SCE/Statistics/: Assumptions.hs  Categorical.hs  Correlation.hs  Descriptive.hs  Distribution.hs  Inference.hs  NonParametric.hs  TestResult.hs
src/SCE/Table/: Contingency.hs  Enrichment.hs  Formatter.hs  Summary.hs
src/SCE/Validation/: Invariants.hs  LiquidTypes.hs  Quality.hs  Schema.hs  Validator.hs
test/Phase0/: ErrorSpec.hs
test/Phase1/: IngestionSpec.hs
test/Phase2/: InvariantsSpec.hs  LiquidSpec.hs  QualitySpec.hs  SchemaValidationSpec.hs
test/Phase3/: StatisticsSpec.hs
test/r/: validate.R
