cabal-version:      3.0
name:               sce
version:            2.0.2
synopsis:           Statistical Charting Engine — ASCII terminal charts and statistics
description:
  SCE is a command-line statistical analysis and charting engine.
  It ingests CSV data, enforces measurement-scale constraints at the type level,
  computes descriptive statistics, and renders ASCII charts and tables.
  .
  Phase 0 introduces the unified DetailedError / SCEResult error system.
license:            BSD-3-Clause
license-file:       LICENSE
author:             SCE Team
maintainer:         dev@sce.example.com
copyright:          (c) SCE Team, 2026
category:           Statistics, Charts
build-type:         Simple
extra-doc-files:    CHANGELOG_V2.0.2_FINAL.md
                    README.md

-- -----------------------------------------------------------------------
-- Common settings shared by library, executable, and test suite
-- -----------------------------------------------------------------------
common common-options
  default-language:   Haskell2010
  ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints
      -fhide-source-paths
  default-extensions:
      OverloadedStrings
      StrictData
      LambdaCase

-- -----------------------------------------------------------------------
-- Library
-- -----------------------------------------------------------------------
library
  import:           common-options
  hs-source-dirs:   src
  exposed-modules:
      -- Core (no internal deps)
      SCE.Core.Error
      SCE.Core.Types
      SCE.Core.MeasurementScale
      SCE.Core.DataModel
      SCE.Core.Statistics
      SCE.Core.Logger
      SCE.Core.Correlation
      -- Ingestion pipeline (Phase 1)
      SCE.Ingestion.Parser
      SCE.Ingestion.Schema
      SCE.Ingestion.MissingData
      SCE.Ingestion.Coercion
      -- Validation
      SCE.Validation.LiquidTypes
      SCE.Validation.Validator
      SCE.Validation.Invariants
      -- Charts
      SCE.Chart.Admissibility
      SCE.Chart.Rejection
      SCE.Chart.BarChart
      SCE.Chart.DotChart
      SCE.Chart.LineChart
      SCE.Chart.ScatterPlot
      SCE.Chart.Histogram
      SCE.Chart.BoxPlot
      SCE.Chart.ConfidenceInterval
      SCE.Chart.Inference
      -- Tables
      SCE.Table.Enrichment
      SCE.Table.Formatter
      -- Output
      SCE.Output.TextRenderer
      SCE.Output.MarkdownRenderer
      SCE.Output.DocxRenderer
      -- CLI
      SCE.CLI.Parser
      SCE.CLI.Interactive
      SCE.CLI.Runner
  build-depends:
      base              >= 4.14  && < 5
    , text              >= 1.2   && < 2.2
    , bytestring        >= 0.10  && < 0.13
    , vector            >= 0.12  && < 0.14
    , vector-algorithms >= 0.8   && < 0.10
    , containers        >= 0.6   && < 0.8
    , unordered-containers >= 0.2 && < 0.3
    , cassava           >= 0.5   && < 0.6
    , statistics        >= 0.15  && < 0.17
    , time              >= 1.9   && < 1.15
    , directory         >= 1.3   && < 1.4
    , filepath          >= 1.4   && < 1.6

-- -----------------------------------------------------------------------
-- Executable
-- -----------------------------------------------------------------------
executable sce
  import:           common-options
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
      base  >= 4.14 && < 5
    , sce
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N

-- -----------------------------------------------------------------------
-- Test suite
-- -----------------------------------------------------------------------
test-suite sce-tests
  import:           common-options
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:
      Phase0.ErrorSpec
      Phase1.IngestionSpec
  build-depends:
      base       >= 4.14 && < 5
    , sce
    , hspec      >= 2.9  && < 2.12
    , QuickCheck >= 2.14 && < 2.16
    , text       >= 1.2  && < 2.2
    , bytestring
    , vector
    , containers
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
